@@ -1,3 +1,5 @@
+* fixed small map refresh (whole map goes white) when switching skins
+
 * fixed bug where sometimes dice would not show up on the select casualties panel
 
 * removed "Heavy Bombers Pick best of X Dice" option from classic and wandering head big world, it didnt work
